# CAD_UAV_SUB

CAD_UAV/FAC_MAV/: CMakeLists.txt
CAD_UAV/FAC_MAV/include/: .cad_uav_controller.hpp.swn  .cad_uav_controller.hpp.swo  .cad_uav_controller.hpp.swp  \  cad_uav_controller.hpp  cad_uav_controller_23-10-18.hpp  cad_uav_controller_pre.hpp  cad_uav_util_function.hpp
CAD_UAV/FAC_MAV/launch/: .cad_norm_launcher.launch.swl  .cad_norm_launcher.launch.swm  .cad_norm_launcher.launch.swn  .cad_norm_launcher.launch.swo  .cad_norm_launcher.launch.swp  FAC_MAV_launcher.launch  cad_norm_launcher.launch  cad_uav_norm_launcher.launch
CAD_UAV/FAC_MAV/src/: FAC_MAV_ctrler.cpp  cad_norm_version.cpp  cad_norm_version_23-10-19.cpp  cad_norm_version_pre.cpp
CAD_UAV/data_logging/src/: data_logging.cpp
CAD_UAV/dynamixel-workbench/dynamixel_workbench_controllers/include/dynamixel_workbench_controllers/: position_control.h
CAD_UAV/dynamixel-workbench/dynamixel_workbench_controllers/src/: .position_control.cpp.swp  position_control.cpp
CAD_UAV/dynamixel-workbench/dynamixel_workbench_toolbox/src/dynamixel_workbench_toolbox/: dynamixel_workbench.cpp
CAD_UAV/receive_command/: CMakeLists.txt
CAD_UAV/receive_command/src/: .receive_command.cpp.swn  .receive_command.cpp.swo  receive_command.cpp
CAD_UAV/sbus_t4/: .sbus_t4.ino.swp  sbus_t4.ino
CAD_UAV/serial/include/serial/: serial.h
CAD_UAV/serial/include/serial/impl/: unix.h
CAD_UAV/serial/src/: serial.cc
CAD_UAV/serial/src/impl/: unix.cc
CAD_UAV/serial_module/: CMakeLists.txt
CAD_UAV/serial_module/src/: .serial_magnetic_sub_new_node.cpp.swn  .serial_magnetic_sub_new_node.cpp.swo  .serial_magnetic_sub_new_node.cpp.swp  serial_magnetic_sub_new_node.cpp
CAD_UAV/serial_module/srv/: serial_safety_msg.srv
CAD_UAV/setting_tf2/src/: setting_t4_tf.cpp
CAD_UAV/setting_tf2_opti/: CMakeLists.txt
CAD_UAV/setting_tf2_opti/src/: :w  setting_drone_tf_opti.cpp
FAC_MAV/include/: cad_uav_controller.hpp  cad_uav_controller_pre.hpp  cad_uav_util_function.hpp
FAC_MAV/launch/: cad_norm_launcher.launch
FAC_MAV/src/: cad_norm_version.cpp
FAC_MAV/srv/: serial_safety_msg.srv
alfons_msgs/: .CMakeLists.txt.swp
aruco_detector_ocv/: CMakeLists.txt
aruco_detector_ocv/launch/: detector.launch  libuvc_start.launch
aruco_detector_ocv/src/: aruco_detector_ocv.cpp  camera_cal.cpp  ros_realsense_opencv_cal.cpp  ros_realsense_opencv_tutorial.cpp  ros_realsense_opencv_tutorial_3.cpp
data_logging/src/: data_logging.cpp
dynamixel-workbench/dynamixel_workbench_controllers/include/dynamixel_workbench_controllers/: position_control.h
dynamixel-workbench/dynamixel_workbench_controllers/launch/: position_control.launch  torque_control.launch
dynamixel-workbench/dynamixel_workbench_controllers/src/: position_control.cpp
receive_command/: package.xml
receive_command/src/: .receive_command.cpp.swp  receive_command.cpp
ros-pwm-pca9685/pwm_pca9685/src/: pca9685_activity.cpp
sbus_t4/: sbus_t4.ino
serial_module/: CMakeLists.txt  package.xml
serial_module/src/: .serial_magnetic_sub_new_node.cpp.swm  .serial_magnetic_sub_new_node.cpp.swp  serial_magnetic_sub_new_node.cpp  serial_magnetic_sub_old_node.cpp
setting_tf2/: CMakeLists.txt
setting_tf2/launch/: tf2_setting.launch
setting_tf2/src/: setting_d435i_tf.cpp  setting_t4_tf.cpp  tf_listener.cpp
setting_tf2_opti/: package.xml
setting_tf2_opti/src/: setting_drone_tf_opti.cpp
